# aikta

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yaml
src/aikta/: __init__.py  app.py  lastfm.py  settings.py  sqlite.py
