[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aikta"
version = "0.0.1"
readme = "README.md"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Katia Esposito", email = "katia@linux.com"},
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "orjson>=3.9.0",
    "ircrobots",
    "uvloop",
    "aiosqlite"
]


[project.scripts]
aikta = "aikta:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/aikta/"]


[tool.ruff]
target-version = "py313"
line-length = 88
select = ["E", "F", "I", "N", "W"]
